--- a/Week7/Day2/01-css-linking-imports/index.html
+++ b/Week7/Day2/01-css-linking-imports/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linking Stylesheets</title>
     <!-- Your code here -->
+    <!-- <link href="button.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet"> -->
+    <link href="import.css" rel="stylesheet">
 </head>
 <body>
     <div class="container">
+        <section>
+            <h1>This page looks so much better with CSS!</h1>
+        </section>
+        <button id="demo" class="button">Hover Over Me</button>
+    </div>
+
+    <div>
         <h1>This page looks so much better with CSS!</h1>
         <button>Hover Over Me</button>
     </div>
